sign up page updated

--- a/landingPage.html
+++ b/landingPage.html
@@ -26,13 +26,17 @@
                 <div class="content">
                     <h3>Welcome to</h3>
                     <h1>QUICKPAY</h1>
-                    <button class="signUp">Sign Up</button>
-                    <button class="logIn">Log In</button>
+                    <!-- <button class="signUp"><a href="signup.html">Sign Up</a></button>
+                    <button class="logIn"><a href="login.html">Log In</a></button> -->
+                    <a href="signup.html" class="signUp">Sign Up</a>
+                    <a href="login.html" class="logIn">Log In</a>
                 </div>
             </div>
         </div>
     </main>
 
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="landingPage.js"></script>
 </body>
 </html>
