--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
                     <p>Already have a account? <a href="login.html">Log In</a></p>
                 </div>
                 <div class="right">
-                    <form class="form_box">
+                    <div class="form_box">
                         <p>Sign Up by filling out this form</p>
                         <div class="fullNameWrapper">
                             <p>Full Name</p>
@@ -58,8 +58,8 @@
                             <input type="text" class="age" placeholder="Enter your Age">
                             <p class="error-message">Must be between 18 to 150</p>
                         </div>
-                        <button type="button" class="signUpSubmitBtn" disabled>Sign Up</button>
-                    </form>
+                        <a href="#" class="signUpSubmitBtn disabled">Sign Up</a>
+                    </div>
                 </div>
             </div>
         </div>
