--- a/dashboard.html
+++ b/dashboard.html
@@ -1,11 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
+    <link rel="stylesheet" href="dashboard.css">
 </head>
+
 <body>
-    
+    <main>
+        <div class="innerBox">
+            <div class="layer">
+                <div class="navBar">
+                    <div class="navLeft">
+                        <img src="assets/userFace.svg" alt="">
+                        <div class="userBasicInfo">
+                            <p class="hello">hello</p>
+                            <p class="userName">Ibrahim</p>
+                        </div>
+                    </div>
+                    <div class="navRight">
+                        <div class="wrapperNavRight">
+                            <h1>QUICKPAY</h1>
+                        </div>
+                        <img src="assets/walletlogo.svg" alt="">
+                    </div>
+                </div>
+                <div class="dashboard">
+                    <div class="dashboardLeft">
+                        <div class="dashboardLeftUp">
+                            <div class="balanceOfUser">
+                                <img src="assets/balance down.svg" alt="" class="balanceDown">
+                                <img src="assets/balance up.svg" alt="" class="balanceUp">
+                                <img src="assets/wires.svg" alt="" class="wire">
+                                <div class="layerOfBalanceUser">
+                                    <div class="textWrapperForBalanceUser">
+                                        <p>Total Balance</p>
+                                        <h1 class="balance"><span>₹</span>1,00,000</h1>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="bankCard">
+                                <div class="bankCardContent">
+                                    <div class="bankNumber">
+                                        <h3>3594 1899 3455 1000</h3>
+                                    </div>
+                                    <div class="otherDetails">
+                                        <p>IBRAHIM AZAR</p>
+                                        <p>12/25</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dashboardLeftdown">
+                            <div class="dashboardLeftdownleft">
+                                <div class="incomeAndOutGoing">
+                                    <div class="monthAndDate">
+                                        <h3>OCTOBER</h3 >
+                                        <p>2025</p>
+                                    </div>
+                                    <div class="incomeAndOutGoingBox">
+                                        <div class="incomeAndOutGoingBoxleft">
+                                            <div class="arrow">
+                                                <img src="assets/Arrow_left.svg" alt="">
+                                            </div>
+                                            <div class="incomeAndOutGoingBoxleftincome">
+                                                <p>Income</p>
+                                                <h3><span>₹ </span>55,000</h3>
+                                            </div>
+                                        </div>
+                                        <div class="incomeAndOutGoingBoxright">
+                                            <div class="arrow">
+                                                <img src="assets/Arrow_left (1).svg" alt="">
+                                            </div>
+                                            <div class="incomeAndOutGoingBoxleftincome">
+                                                <p>Outcome</p>
+                                                <h3><span>₹ </span>3000</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="savings">
+                                    <div class="savingsLeft">
+                                        <p class="no_savings_text">No Savings Added</p>
+                                        <div class="savingsLeftUp">
+                                            <h2>Savings</h2>
+                                            <p class="savingsSeeAll">See All</p>
+                                        </div>
+                                        <div class="savingsLeftDown">
+                                            <div class="savingsLeftDownTop">
+                                                <div class="savingBoxes savingBoxes1">
+                                                    <div class="savingBoxesContent1 savingBoxesContent">
+                                                        <div class="savingsNameAndArrow">
+                                                            <p class="savingsName">Iphone 13 pro</p>
+                                                            <img src="assets/Expand_right.svg" alt="">
+                                                        </div>
+                                                        <h2 class="totalSaved"><span>₹</span>70<span>K</span></h2>
+                                                    </div>
+                                                    <div class="savingBoxesProgressBar1 savingBoxesProgressBar">
+                                                        <div class="progress"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="savingBoxes savingBoxes2">
+                                                    <div class="savingBoxesContent1 savingBoxesContent">
+                                                        <div class="savingsNameAndArrow">
+                                                            <p class="savingsName">Lamborgini</p>
+                                                            <img src="assets/Expand_right.svg" alt="">
+                                                        </div>
+                                                        <h2 class="totalSaved"><span>₹</span>7<span>Cr</span></h2>
+                                                    </div>
+                                                    <div class="savingBoxesProgressBar1 savingBoxesProgressBar">
+                                                        <div class="progress"></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="savingsLeftDownBottom">
+                                                <div class="savingBoxes savingBoxes3">
+                                                    <div class="savingBoxesContent1 savingBoxesContent">
+                                                        <div class="savingsNameAndArrow">
+                                                            <p class="savingsName">House</p>
+                                                            <img src="assets/Expand_right.svg" alt="">
+                                                        </div>
+                                                        <h2 class="totalSaved"><span>₹</span>50<span>L</span></h2>
+                                                    </div>
+                                                    <div class="savingBoxesProgressBar1 savingBoxesProgressBar">
+                                                        <div class="progress"></div>
+                                                    </div>
+                                                </div>
+                                                <div class="savingBoxes savingBoxes4">
+                                                    <div class="savingBoxesContent1 savingBoxesContent">
+                                                        <div class="savingsNameAndArrow">
+                                                            <p class="savingsName">PS 5</p>
+                                                            <img src="assets/Expand_right.svg" alt="">
+                                                        </div>
+                                                        <h2 class="totalSaved"><span>₹</span>40<span>K</span></h2>
+                                                    </div>
+                                                    <div class="savingBoxesProgressBar1 savingBoxesProgressBar">
+                                                        <div class="progress"></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="savingsRight">
+                                        <img src="assets/savingsAddButton.svg" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="dashboardLeftdownRight">
+                                <div class="people">
+                                    <div class="peopleLeft">
+                                        <h3>Your people</h3>
+                                        <p>Just choose who you want to pay</p>
+                                        <div class="peopleImageWrapper">
+                                            <img src="assets/Image.svg" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="peopleRight">
+                                        <p class="no_people_added">No People Added</p>
+                                        <div class="peopleCards peopleCards1">
+                                                <div class="peoplepfp">
+                                                </div>
+                                                <div class="peopleOtherDetails">
+                                                    <h3 class="peopleName">Abhijit Karmakar</h3>
+                                                    <p class="peopleRelation">Friend</p>
+                                                </div>
+                                        </div>
+                                        <div class="peopleCards peopleCards2">
+                                                <div class="peoplepfp">
+                                                </div>
+                                                <div class="peopleOtherDetails">
+                                                    <h3 class="peopleName">Disha Saha</h3>
+                                                    <p class="peopleRelation">Friend</p>
+                                                </div>
+                                        </div>
+                                        <div class="peopleCards peopleCards3">
+                                                <div class="peoplepfp">
+                                                </div>
+                                                <div class="peopleOtherDetails">
+                                                    <h3 class="peopleName">Manju Dhara</h3>
+                                                    <p class="peopleRelation">Friend</p>
+                                                </div>
+                                        </div>
+                                        <div class="peopleCards peopleCards4">
+                                                <div class="peoplepfp">
+                                                </div>
+                                                <div class="peopleOtherDetails">
+                                                    <h3 class="peopleName">Bishakha Dutta</h3>
+                                                    <p class="peopleRelation">Friend</p>
+                                                </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="dashboardRight">
+                        <div class="transactions">
+                            <h3>Transactions</h3>
+                            <div class="transaction_slides">
+                                <div class="slides">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dock">
+                    <div class="dockbox">
+                        <a href="#"><i class="ri-home-fill"></i></a>
+                        <a href="#"><i class="ri-wallet-fill"></i></a>
+                        <a href="#"><i class="ri-hand-coin-fill"></i></a>
+                        <a href="#"><i class="ri-team-fill"></i></a>
+                        <a href="#"><i class="ri-history-fill"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="dashboard.js"></script>
 </body>
+
 </html>
