dashboard completed , animaitons to be added

--- a/dashboard.html
+++ b/dashboard.html
@@ -201,9 +201,22 @@
                         <div class="transactions">
                             <h3>Transactions</h3>
                             <div class="transaction_slides">
-                                <div class="slides">
-                                    
-                                </div>
+                                <p class="no_transaction">No Transactions</p>
+                                <!-- <div class="slides">
+                                    <div class="slidesLeft">
+                                        <div class="slidesLeftName">
+                                            <h1 class="transaction_name">Dribble</h1>
+                                            <p class="transaction_type">Subscription Fees</p>
+                                        </div>
+                                        <div class="transactionAmount">
+                                            <h2>- ₹<span class="amount">500</span></h2>
+                                        </div>
+                                    </div>
+                                    <div class="slidesRight">
+                                        <p class="transactions_date">13th February 2025</p>
+                                        <p class="transactions_description">No Description</p>
+                                    </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
