--- a/dashboard.html
+++ b/dashboard.html
@@ -234,6 +234,7 @@
         </div>
     </main>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="dashboard.js"></script>
 </body>
 
