--- a/dashboard.html
+++ b/dashboard.html
@@ -45,10 +45,10 @@
                             <div class="bankCard">
                                 <div class="bankCardContent">
                                     <div class="bankNumber">
-                                        <h3>3594 1899 3455 1000</h3>
+                                        <h3>3594 1899 3455 1000</h3>    
                                     </div>
                                     <div class="otherDetails">
-                                        <p>IBRAHIM AZAR</p>
+                                        <p class="user_name">IBRAHIM AZAR</p>
                                         <p>12/25</p>
                                     </div>
                                 </div>
