working on the savings page

--- a/dashboard.html
+++ b/dashboard.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="dock">
                     <div class="dockbox">
-                        <a href="#"><i class="ri-home-fill"></i></a>
+                        <a href="dashboard.html"><i class="ri-home-fill"></i></a>
                         <a href="#"><i class="ri-wallet-fill"></i></a>
                         <a href="#"><i class="ri-hand-coin-fill"></i></a>
                         <a href="#"><i class="ri-team-fill"></i></a>
