working on the savings page

--- a/savings.html
+++ b/savings.html
@@ -14,16 +14,181 @@
             <div class="layer">
                 <div class="left"></div>
                 <div class="right">
-                    <div class="savingCards">
+                    <div class="savingCards" style="background-image: url(assets/red_savings_card3.png);">
                         <div class="savingCardsLayer">
-                            <p class="savingsId">1021</p>
-                            <h1 class="savingsName">Iphone 13 Pro</h1>
-                            <h3 class="savingsSaved">Saved: <span>5K</span></h3>
-                            <h3 class="savingsTarget">Target: <span>50K</span></h3>
-                            <div class="progress">
-                                <div class="totalProgress"></div>
+                            <div>
+                                <h1 class="savingsName">Iphone 13 Pro</h1>
                             </div>
-                            <button class="see_more">SEE MORE</button>
+
+                            <div>
+                                <div class="progressInfo">
+                                    <div class="progressText">
+                                        <h3 class="savingsSaved"><span>₹</span>5K</h3>
+                                        <p class="savingsTarget">of <span>₹</span>50K</p>
+                                    </div>
+                                    <p class="savingsPercentage">10%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="totalProgress" style="width: 10%;"></div>
+                                </div>
+                            </div>
+
+                            <div class="cardFooter">
+                                <p class="savingsId">#1021</p>
+                                <button class="see_more">SEE MORE</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="savingCards" style="background-image: url(assets/blue_savings_card.jpg);">
+                        <div class="savingCardsLayer">
+                            <div>
+                                <h1 class="savingsName">New Car</h1>
+                            </div>
+                            <div>
+                                <div class="progressInfo">
+                                    <div class="progressText">
+                                        <h3 class="savingsSaved"><span>₹</span>2L</h3>
+                                        <p class="savingsTarget">of <span>₹</span>10L</p>
+                                    </div>
+                                    <p class="savingsPercentage">20%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="totalProgress"
+                                        style="width: 20%; background: linear-gradient(90deg, #ffffff 0%, #a1c4fd 100%); box-shadow: 0 0 10px rgba(100, 150, 255, 0.7);">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cardFooter">
+                                <p class="savingsId">#1022</p>
+                                <button class="see_more" style="color: #2980b9;">SEE MORE</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="savingCards" style="background-image: url(assets/yellow_savings_card.png);">
+                        <div class="savingCardsLayer">
+                            <div>
+                                <h1 class="savingsName">Vacation</h1>
+                            </div>
+                            <div>
+                                <div class="progressInfo">
+                                    <div class="progressText">
+                                        <h3 class="savingsSaved"><span>₹</span>75K</h3>
+                                        <p class="savingsTarget">of <span>₹</span>1L</p>
+                                    </div>
+                                    <p class="savingsPercentage">75%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="totalProgress"
+                                        style="width: 75%; background: linear-gradient(90deg, #ffffff 0%, #fde08d 100%); box-shadow: 0 0 10px rgba(253, 224, 141, 0.7);">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cardFooter">
+                                <p class="savingsId">#1023</p>
+                                <button class="see_more" style="color: #f39c12;">SEE MORE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="savingCards" style="background-image: url(assets/yellow_savings_card.png);">
+                        <div class="savingCardsLayer">
+                            <div>
+                                <h1 class="savingsName">Vacation</h1>
+                            </div>
+                            <div>
+                                <div class="progressInfo">
+                                    <div class="progressText">
+                                        <h3 class="savingsSaved"><span>₹</span>75K</h3>
+                                        <p class="savingsTarget">of <span>₹</span>1L</p>
+                                    </div>
+                                    <p class="savingsPercentage">75%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="totalProgress"
+                                        style="width: 75%; background: linear-gradient(90deg, #ffffff 0%, #fde08d 100%); box-shadow: 0 0 10px rgba(253, 224, 141, 0.7);">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cardFooter">
+                                <p class="savingsId">#1023</p>
+                                <button class="see_more" style="color: #f39c12;">SEE MORE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="savingCards" style="background-image: url(assets/yellow_savings_card.png);">
+                        <div class="savingCardsLayer">
+                            <div>
+                                <h1 class="savingsName">Vacation</h1>
+                            </div>
+                            <div>
+                                <div class="progressInfo">
+                                    <div class="progressText">
+                                        <h3 class="savingsSaved"><span>₹</span>75K</h3>
+                                        <p class="savingsTarget">of <span>₹</span>1L</p>
+                                    </div>
+                                    <p class="savingsPercentage">75%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="totalProgress"
+                                        style="width: 75%; background: linear-gradient(90deg, #ffffff 0%, #fde08d 100%); box-shadow: 0 0 10px rgba(253, 224, 141, 0.7);">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cardFooter">
+                                <p class="savingsId">#1023</p>
+                                <button class="see_more" style="color: #f39c12;">SEE MORE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="savingCards" style="background-image: url(assets/yellow_savings_card.png);">
+                        <div class="savingCardsLayer">
+                            <div>
+                                <h1 class="savingsName">Vacation</h1>
+                            </div>
+                            <div>
+                                <div class="progressInfo">
+                                    <div class="progressText">
+                                        <h3 class="savingsSaved"><span>₹</span>75K</h3>
+                                        <p class="savingsTarget">of <span>₹</span>1L</p>
+                                    </div>
+                                    <p class="savingsPercentage">75%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="totalProgress"
+                                        style="width: 75%; background: linear-gradient(90deg, #ffffff 0%, #fde08d 100%); box-shadow: 0 0 10px rgba(253, 224, 141, 0.7);">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cardFooter">
+                                <p class="savingsId">#1023</p>
+                                <button class="see_more" style="color: #f39c12;">SEE MORE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="savingCards" style="background-image: url(assets/yellow_savings_card.png);">
+                        <div class="savingCardsLayer">
+                            <div>
+                                <h1 class="savingsName">Vacation</h1>
+                            </div>
+                            <div>
+                                <div class="progressInfo">
+                                    <div class="progressText">
+                                        <h3 class="savingsSaved"><span>₹</span>75K</h3>
+                                        <p class="savingsTarget">of <span>₹</span>1L</p>
+                                    </div>
+                                    <p class="savingsPercentage">75%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="totalProgress"
+                                        style="width: 75%; background: linear-gradient(90deg, #ffffff 0%, #fde08d 100%); box-shadow: 0 0 10px rgba(253, 224, 141, 0.7);">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cardFooter">
+                                <p class="savingsId">#1023</p>
+                                <button class="see_more" style="color: #f39c12;">SEE MORE</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -31,7 +196,10 @@
         </div>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+        integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollToPlugin.min.js"></script> -->
     <script src="savings.js"></script>
 </body>
 
