new changes to the savings page

--- a/savings.html
+++ b/savings.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="savings.css">
 </head>
 
@@ -12,7 +13,11 @@
     <main>
         <div class="innerBox">
             <div class="layer">
-                <div class="left"></div>
+                <div class="left">
+                    <div class="addButton">
+                        <img src="assets/savingsAddButton.svg" alt="">
+                    </div>
+                </div>
                 <div class="right">
                     <div class="savingCards" style="background-image: url(assets/red_savings_card3.png);">
                         <div class="savingCardsLayer">
@@ -190,6 +195,15 @@
                                 <button class="see_more" style="color: #f39c12;">SEE MORE</button>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="dock">
+                    <div class="dockbox">
+                        <a href="dashboard.html"><i class="ri-home-fill"></i></a>
+                        <a href="#"><i class="ri-wallet-fill"></i></a>
+                        <a href="#"><i class="ri-hand-coin-fill"></i></a>
+                        <a href="#"><i class="ri-team-fill"></i></a>
+                        <a href="#"><i class="ri-history-fill"></i></a>
                     </div>
                 </div>
             </div>
