--- a/dashboard.html
+++ b/dashboard.html
@@ -224,7 +224,7 @@
                 <div class="dock">
                     <div class="dockbox">
                         <a href="dashboard.html"><i class="ri-home-fill"></i></a>
-                        <a href="#"><i class="ri-wallet-fill"></i></a>
+                        <a href="savings.html"><i class="ri-wallet-fill"></i></a>
                         <a href="#"><i class="ri-hand-coin-fill"></i></a>
                         <a href="#"><i class="ri-team-fill"></i></a>
                         <a href="#"><i class="ri-history-fill"></i></a>
